# non-relational_shop

./: .dockerignore  Makefile  README.md  depends.py  docker-compose.yml  logger.py  main.py  nginx.conf  pyproject.toml  settings.py  tox.ini
dockerfiles/: proxy.Dockerfile  service.Dockerfile
lifespan/: __init__.py  lifespan_manager.py  startup_events.py
routers/api/: __init__.py  backend.py  order.py  services.py  shop.py
routers/web/: __init__.py  html.py
schemas/: __init__.py  item_schema.py  order_from_shop.py  order_to_mongo.py
services/: __init__.py  mongo_service.py  mongo_shop_service.py
static/base/: base.css  drop.css
static/css/: basket.css  main.css  orders.css
static/js/: action.js  basket.js
templates/: base.html  basket.html  main_page.html  orders.html
utils/: __init__.py  exception_factory.py
