[tool.poetry]
name = "non-relational-shop"
version = "0.1.0"
description = ""
authors = ["Magistrat <nisraton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.2"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.10.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]


[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = ['venv', '.venv']

[tool.flake8]
max-line-length = 120
per-file-ignores = """
    */__init__.py: F401
"""
exclude = [
    "venv",
    ".gitlab-ci.yml",
    "Dockerfile",
    "README.md",
    "requirements.txt",
    ".git"
]